# ci-preflight

./: .gitignore  AGENTS.md  Cargo.toml  README.md
data/: action_catalog.yaml  well_known_actions.json
data/cmd_kind_rules/: simple_commands.yaml  subcommands.yaml
docs/: design.md  sub_sh.bnf  sub_workflow_schema.json
local/: koubo20251110.md
src/: action_catalog.rs  actions_parser.rs  analysis.rs  ast.rs  cmd_kind_rules.rs  env_check.rs  main.rs
src/actions_parser/: actions_ast.rs  arena.rs  parser.rs  sh_parser.rs  source_map.rs
src/actions_parser/sh_parser/: arena.rs  sh_ast.rs  sh_lexer.rs  sh_parser.rs  sh_token.rs
src/analysis/: annotate.rs  classify.rs  tests.rs
src/analyzer/: action_catalog.rs  annotate.rs  classify.rs  cmd_kind_rules.rs  mod.rs  tests.rs
src/commands/: mod.rs
src/executer/: env_check.rs  mod.rs
src/optimizer/: mod.rs
src/parser/: actions_ast.rs  arena.rs  mod.rs  parser.rs  sh_parser.rs  source_map.rs
src/parser/sh_parser/: sh_ast.rs  sh_lexer.rs  sh_parser.rs  sh_token.rs
test/: unit_test.yml
